fix header text behind navigation button #1025

--- a/app/assets/stylesheets/rightboat/navbar.less
+++ b/app/assets/stylesheets/rightboat/navbar.less
@@ -30,13 +30,13 @@
     font-weight: normal;
     font-size: 32px;
     line-height: 1em;
-    margin: 15px 0 5px 0;
+    margin: 15px 65px 5px 0;
   }
   h3 {
     font-weight: normal;
     font-size: 24px;
     line-height: 1em;
-    margin: 0;
+    margin: 0 65px 0 0;
   }
 }
 
